examples/test/testpolicy10244.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10244
  namespace: namespace249
spec:
  podSelector:
    matchLabels:
      key46: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value9
          key30: value47
          key28: value35
      podSelector:
        matchLabels:
          key31: value37
          key14: value8
          key26: value21
